--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.firebase:firebase-database:19.6.0'
+    //implementation files('libs\\cts-1.5.2.jar')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'org.osgeo:proj4j:0.1.0'
 }
