--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LocationBasedDiary">
-        <activity android:name=".AddTask"></activity>
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="@string/mapAPIkey"/>
+
+        <activity android:name=".MapPlot"></activity>
+        <activity android:name=".AddTask" />
         <activity android:name=".ForgotPasswordActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity">
