--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'pub.devrel:easypermissions:3.0.0'
     implementation 'org.osgeo:proj4j:0.1.0'
 }
